src/main/java/antlr4/GrammarSimpleParser.java
// Generated from /home/vadbeg/Projects/University/compilers/simple-compiler/src/main/java/antlr4/GrammarSimple.g4 by ANTLR 4.9.1
package antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarSimpleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, CompareOperator=9, 
		LessThan=10, LessOrEqual=11, GreaterThan=12, GreaterOrEqual=13, Equal=14, 
		NotEqual=15, And=16, Or=17, PackageName=18, EndOfLine=19, Integer=20, 
		Float=21, Return=22, ID=23, OpenBracket=24, CloseBracket=25, Plus=26, 
		PlusAss=27, Minus=28, MinusAss=29, Star=30, StarAss=31, Devide=32, DevideAss=33, 
		Comma=34, Pow=35, Sqrt=36, Assign=37, Number=38, Digit=39, WS=40;
	public static final int
		RULE_program = 0, RULE_moduleName = 1, RULE_function = 2, RULE_type = 3, 
		RULE_attributs = 4, RULE_callAttributs = 5, RULE_main = 6, RULE_callFunction = 7, 
		RULE_ifFunc = 8, RULE_bodyFunc = 9, RULE_thenFunc = 10, RULE_elseFunc = 11, 
		RULE_forFunc = 12, RULE_functionReturn = 13, RULE_callProcedure = 14, 
		RULE_bodyProc = 15, RULE_ifProc = 16, RULE_thenProc = 17, RULE_elseProc = 18, 
		RULE_forProc = 19, RULE_condition = 20, RULE_conditionFor = 21, RULE_math = 22, 
		RULE_operation = 23, RULE_ass = 24, RULE_summOperation = 25, RULE_diffOperation = 26, 
		RULE_multOperation = 27, RULE_divOperation = 28, RULE_inPowOperation = 29, 
		RULE_summ = 30, RULE_diff = 31, RULE_mult = 32, RULE_div = 33, RULE_inPow = 34, 
		RULE_inSqrt = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "moduleName", "function", "type", "attributs", "callAttributs", 
			"main", "callFunction", "ifFunc", "bodyFunc", "thenFunc", "elseFunc", 
			"forFunc", "functionReturn", "callProcedure", "bodyProc", "ifProc", "thenProc", 
			"elseProc", "forProc", "condition", "conditionFor", "math", "operation", 
			"ass", "summOperation", "diffOperation", "multOperation", "divOperation", 
			"inPowOperation", "summ", "diff", "mult", "div", "inPow", "inSqrt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'package'", "'main'", "'if'", "'start'", "'finish'", "'then'", 
			"'else'", "'for'", null, "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", 
			"'and'", "'or'", null, "';'", "'int'", "'float'", "'return'", null, "'('", 
			"')'", "'+'", "'+='", "'-'", "'-='", "'*'", "'*='", "'/'", "'/='", "','", 
			"'^'", "'~'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "CompareOperator", 
			"LessThan", "LessOrEqual", "GreaterThan", "GreaterOrEqual", "Equal", 
			"NotEqual", "And", "Or", "PackageName", "EndOfLine", "Integer", "Float", 
			"Return", "ID", "OpenBracket", "CloseBracket", "Plus", "PlusAss", "Minus", 
			"MinusAss", "Star", "StarAss", "Devide", "DevideAss", "Comma", "Pow", 
			"Sqrt", "Assign", "Number", "Digit", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammarSimple.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarSimpleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ModuleNameContext moduleName() {
			return getRuleContext(ModuleNameContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarSimpleVisitor ) return ((GrammarSimpleVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			moduleName();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Integer || _la==Float) {
				{
				{
				setState(73);
				function();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleNameContext extends ParserRuleContext {
		public TerminalNode PackageName() { return getToken(GrammarSimpleParser.PackageName, 0); }
		public TerminalNode EndOfLine() { return getToken(GrammarSimpleParser.EndOfLine, 0); }
		public ModuleNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).enterModuleName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).exitModuleName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarSimpleVisitor ) return ((GrammarSimpleVisitor<? extends T>)visitor).visitModuleName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleNameContext moduleName() throws RecognitionException {
		ModuleNameContext _localctx = new ModuleNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduleName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__0);
			setState(82);
			match(PackageName);
			setState(83);
			match(EndOfLine);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(GrammarSimpleParser.ID, 0); }
		public AttributsContext attributs() {
			return getRuleContext(AttributsContext.class,0);
		}
		public BodyFuncContext bodyFunc() {
			return getRuleContext(BodyFuncContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarSimpleVisitor ) return ((GrammarSimpleVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			type();
			setState(86);
			match(ID);
			setState(87);
			attributs();
			setState(88);
			bodyFunc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode Integer() { return getToken(GrammarSimpleParser.Integer, 0); }
		public TerminalNode Float() { return getToken(GrammarSimpleParser.Float, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarSimpleVisitor ) return ((GrammarSimpleVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_la = _input.LA(1);
			if ( !(_la==Integer || _la==Float) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributsContext extends ParserRuleContext {
		public TerminalNode OpenBracket() { return getToken(GrammarSimpleParser.OpenBracket, 0); }
		public TerminalNode CloseBracket() { return getToken(GrammarSimpleParser.CloseBracket, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(GrammarSimpleParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GrammarSimpleParser.ID, i);
		}
		public List<TerminalNode> Comma() { return getTokens(GrammarSimpleParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(GrammarSimpleParser.Comma, i);
		}
		public AttributsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).enterAttributs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).exitAttributs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarSimpleVisitor ) return ((GrammarSimpleVisitor<? extends T>)visitor).visitAttributs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributsContext attributs() throws RecognitionException {
		AttributsContext _localctx = new AttributsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attributs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(OpenBracket);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Integer || _la==Float) {
				{
				setState(93);
				type();
				setState(94);
				match(ID);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(95);
					match(Comma);
					setState(96);
					type();
					setState(97);
					match(ID);
					}
					}
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(106);
			match(CloseBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallAttributsContext extends ParserRuleContext {
		public TerminalNode OpenBracket() { return getToken(GrammarSimpleParser.OpenBracket, 0); }
		public TerminalNode CloseBracket() { return getToken(GrammarSimpleParser.CloseBracket, 0); }
		public List<TerminalNode> ID() { return getTokens(GrammarSimpleParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GrammarSimpleParser.ID, i);
		}
		public List<TerminalNode> Number() { return getTokens(GrammarSimpleParser.Number); }
		public TerminalNode Number(int i) {
			return getToken(GrammarSimpleParser.Number, i);
		}
		public List<TerminalNode> Digit() { return getTokens(GrammarSimpleParser.Digit); }
		public TerminalNode Digit(int i) {
			return getToken(GrammarSimpleParser.Digit, i);
		}
		public List<CallFunctionContext> callFunction() {
			return getRuleContexts(CallFunctionContext.class);
		}
		public CallFunctionContext callFunction(int i) {
			return getRuleContext(CallFunctionContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(GrammarSimpleParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(GrammarSimpleParser.Comma, i);
		}
		public CallAttributsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callAttributs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).enterCallAttributs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).exitCallAttributs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarSimpleVisitor ) return ((GrammarSimpleVisitor<? extends T>)visitor).visitCallAttributs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallAttributsContext callAttributs() throws RecognitionException {
		CallAttributsContext _localctx = new CallAttributsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_callAttributs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(OpenBracket);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << Number) | (1L << Digit))) != 0)) {
				{
				setState(113);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(109);
					match(ID);
					}
					break;
				case 2:
					{
					setState(110);
					match(Number);
					}
					break;
				case 3:
					{
					setState(111);
					match(Digit);
					}
					break;
				case 4:
					{
					setState(112);
					callFunction();
					}
					break;
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(115);
					match(Comma);
					setState(120);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(116);
						match(ID);
						}
						break;
					case 2:
						{
						setState(117);
						match(Number);
						}
						break;
					case 3:
						{
						setState(118);
						match(Digit);
						}
						break;
					case 4:
						{
						setState(119);
						callFunction();
						}
						break;
					}
					}
					}
					setState(126);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(129);
			match(CloseBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public BodyProcContext bodyProc() {
			return getRuleContext(BodyProcContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarSimpleVisitor ) return ((GrammarSimpleVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__1);
			setState(132);
			bodyProc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallFunctionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrammarSimpleParser.ID, 0); }
		public CallAttributsContext callAttributs() {
			return getRuleContext(CallAttributsContext.class,0);
		}
		public CallFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).enterCallFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).exitCallFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarSimpleVisitor ) return ((GrammarSimpleVisitor<? extends T>)visitor).visitCallFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallFunctionContext callFunction() throws RecognitionException {
		CallFunctionContext _localctx = new CallFunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_callFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(ID);
			setState(135);
			callAttributs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfFuncContext extends ParserRuleContext {
		public TerminalNode OpenBracket() { return getToken(GrammarSimpleParser.OpenBracket, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode CloseBracket() { return getToken(GrammarSimpleParser.CloseBracket, 0); }
		public ThenFuncContext thenFunc() {
			return getRuleContext(ThenFuncContext.class,0);
		}
		public ElseFuncContext elseFunc() {
			return getRuleContext(ElseFuncContext.class,0);
		}
		public IfFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).enterIfFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).exitIfFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarSimpleVisitor ) return ((GrammarSimpleVisitor<? extends T>)visitor).visitIfFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfFuncContext ifFunc() throws RecognitionException {
		IfFuncContext _localctx = new IfFuncContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(T__2);
			setState(138);
			match(OpenBracket);
			setState(139);
			condition();
			setState(140);
			match(CloseBracket);
			setState(141);
			thenFunc();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(142);
				elseFunc();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyFuncContext extends ParserRuleContext {
		public List<IfFuncContext> ifFunc() {
			return getRuleContexts(IfFuncContext.class);
		}
		public IfFuncContext ifFunc(int i) {
			return getRuleContext(IfFuncContext.class,i);
		}
		public List<ForFuncContext> forFunc() {
			return getRuleContexts(ForFuncContext.class);
		}
		public ForFuncContext forFunc(int i) {
			return getRuleContext(ForFuncContext.class,i);
		}
		public FunctionReturnContext functionReturn() {
			return getRuleContext(FunctionReturnContext.class,0);
		}
		public List<MathContext> math() {
			return getRuleContexts(MathContext.class);
		}
		public MathContext math(int i) {
			return getRuleContext(MathContext.class,i);
		}
		public List<TerminalNode> EndOfLine() { return getTokens(GrammarSimpleParser.EndOfLine); }
		public TerminalNode EndOfLine(int i) {
			return getToken(GrammarSimpleParser.EndOfLine, i);
		}
		public BodyFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).enterBodyFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).exitBodyFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarSimpleVisitor ) return ((GrammarSimpleVisitor<? extends T>)visitor).visitBodyFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyFuncContext bodyFunc() throws RecognitionException {
		BodyFuncContext _localctx = new BodyFuncContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bodyFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(T__3);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__7) | (1L << ID))) != 0)) {
				{
				setState(151);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					{
					setState(146);
					math();
					setState(147);
					match(EndOfLine);
					}
					}
					break;
				case T__2:
					{
					setState(149);
					ifFunc();
					}
					break;
				case T__7:
					{
					setState(150);
					forFunc();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Return) {
				{
				setState(156);
				functionReturn();
				}
			}

			setState(159);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThenFuncContext extends ParserRuleContext {
		public BodyFuncContext bodyFunc() {
			return getRuleContext(BodyFuncContext.class,0);
		}
		public ThenFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thenFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).enterThenFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarSimpleListener ) ((GrammarSimpleListener)listener).exitThenFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarSimpleVisitor ) return ((GrammarSimpleVisitor<? extends T>)visitor).visitThenFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThenFuncContext thenFunc() throws RecognitionException {
		ThenFuncContext _localctx = new ThenFuncContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_thenFunc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(T__5);
			setState(162);
			bodyFunc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
